--- a/LeetCode/LeetCode/appsettings.json
+++ b/LeetCode/LeetCode/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "localhost_mysql": "Server=localhost;port=3306;database=bookstore;uid=root;pwd=123456;charset=utf8;Allow User Variables=True;sslMode=None;"
+  }
 }
