--- a/LeetCode/LeetCode.Service/LeetCode.Service.csproj
+++ b/LeetCode/LeetCode.Service/LeetCode.Service.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.9" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LeetCode.Data\LeetCode.Data.csproj" />
+  </ItemGroup>
+
 </Project>
