--- a/LeetCode/LeetCode/appsettings.json
+++ b/LeetCode/LeetCode/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "localhost_mysql": "Server=localhost;port=3306;database=bookstore;uid=root;pwd=123456;charset=utf8;Allow User Variables=True;sslMode=None;"
+    "localhost_mysql": "Server=localhost;port=3306;database=bookstore;uid=root;pwd=d#Xyti4nXMaG;charset=utf8;Allow User Variables=True;sslMode=None;"
   }
 }
